# discord-bot

./: .env.example  .gitattributes  .gitignore  README.md  ROADMAP.md  bot.py  config.py  constants.py  pyproject.toml  requirements.txt
cogs/: admin_commands.py  events.py  private.py  registration.py  sages.py  stats_capture.py  user_commands.py
cogs/registration/: __init__.py  cog.py  handlers.py  steps.py  views.py
cogs/sages/: __init__.py  helpers.py  notifications.py  views.py
data/: charte.json  map_template.html
data/charte/: charte_en.html  charte_fr.html
data/texts/: charte_0_intro.txt  charte_0a_intro.txt  charte_0b_intro.txt  charte_1_regles_generales.txt  charte_2_structure_roles.txt  charte_3_regles_fonctionnement.txt  charte_4_sanctions.txt
docs/: ARCHITECTURE.md  PLAN_EVOLUTION.md  SSH_SETUP.md  carte.html  carte_meta.json  charte.html  index.html
local_processing/: .env.local.example  README.md  process_queue.py  recalculate_builds.py  requirements.txt
locales/: en.json  fr.json
migrations/: 001_multi_team_support.sql  002_discord_id_migration.sql  003_username_history.sql  004_location_display.sql  005_drop_charte_tables.sql  006_audit_log.sql  007_capture_queue.sql  007_player_stats.sql  008_player_equipment.sql  009_capture_queue_player.sql  010_drop_unique_discord_name.sql
models/: capture_queue.py  member_approval.py  player.py  player_equipment.py  player_stats.py  schemas.py  user_profile.py
scripts/: RESTART_BOT.sh  SHOW_BOT.sh  SHOW_WEB.sh  START_BOT.sh  STOP_BOT.sh  deploy.ps1  deploy.sh  discord-bot-web.service  regenerate_map.py  run_migration.py
tests/: conftest.py  tesseract.py
tests/test_models/: test_player.py  test_schemas.py  test_user_profile.py
tests/test_utils/: __init__.py  test_cache.py  test_i18n.py  test_rate_limit.py  test_retry.py  test_validators.py
utils/: audit.py  cache.py  database.py  debug.py  discord_helpers.py  geocoding.py  i18n.py  image_processing.py  logger.py  map_generator.py  metrics.py  migrations.py  rate_limit.py  retry.py  roles.py  validators.py
web/: server.py
