[project]
name = "discord-bot"
version = "0.2.0"
description = "Bot Discord pour la team This is PSG"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.11",
    "aiosignal==1.3.2",
    "asyncpg==0.30.0",
    "attrs==24.3.0",
    "cffi==1.17.1",
    "discord-py==2.4.0",
    "frozenlist==1.5.0",
    "idna==3.10",
    "multidict==6.1.0",
    "numpy==2.2.2",
    "opencv-python==4.11.0.86",
    "packaging==24.2",
    "pillow==11.1.0",
    "propcache==0.2.1",
    "pycparser==2.22",
    "pynacl==1.5.0",
    "pytesseract==0.3.13",
    "python-dotenv==1.0.1",
    "yarl==1.18.3",
]
